[metadata]
name = arls
version = 1.0.2
author = Rondall E Jones
author_email = rejones7@msn.com
description = Robust solver plus constraints for ill-conditioned linear systems of any shape
long_description = file: README.txt
long_description_content_type = text/plain
url = http://www.rejtrix.net/
project_urls = 
	Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

