[metadata]
name = arls
version = 1.0.2
author = Rondall E Jones
author_email = rejones7@msn.com
description = Robust solver plus constraints for ill-conditioned linear systems of any shape
long_description = file: README.md
long_description_content_type = text/markdown
url = http://www.rejtrix.net/
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

